--- a/Quotes/src/app/form/form.component.html
+++ b/Quotes/src/app/form/form.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <form (ngSubmit)="submitQuote()">
+    <form (ngSubmit)="submitQuote()" #quoteForm='ngForm'>
   
      
         <br>
