--- a/Quotes/src/styles.css
+++ b/Quotes/src/styles.css
@@ -2,7 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 body {
-    background-image: url("./assets/download.jpeg");
+    background-image: url("./assets/download\ \(1\).jpeg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
